# rustwing

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFESTO.md  README.md  ROADMAP.md
api/: Cargo.toml
api/migrations/: 00000000000000_create_trigger_function.sql  00000000000002_create_posts.sql
api/src/: error.rs  main.rs  state.rs
api/src/domain/: mod.rs  post.rs  user.rs
api/src/http/: extractors.rs  mod.rs
api/src/http/dtos/: ai_dto.rs  mod.rs  post_dto.rs  user_dto.rs
api/src/http/handlers/: ai_routes.rs  auth_routes.rs  mod.rs  post_routes.rs  user_routes.rs
api/src/repository/: mod.rs  post_repo.rs  user_repo.rs
api/src/services/: mod.rs  user_service.rs
cli/: Cargo.toml  gen_template.py
cli/src/: generate.rs  main.rs  new.rs  template_data.rs
cli/src/template/api/src/: state.rs
cli/src/template/api/src/http/: extractors.rs
cli/template/: .env.example  AGENTS.md  Cargo.toml
cli/template/api/: Cargo.toml
cli/template/api/migrations/: 00000000000001_create_users.sql
cli/template/api/src/: error.rs  main.rs  state.rs
cli/template/api/src/domain/: user.rs
cli/template/api/src/http/: extractors.rs  mod.rs
cli/template/api/src/http/dtos/: user_dto.rs
cli/template/api/src/http/handlers/: auth_routes.rs  mod.rs  user_routes.rs
cli/template/api/src/repository/: user_repo.rs
cli/template/api/src/services/: user_service.rs
cli/template/worker/: Cargo.toml
cli/template/worker/src/: main.rs
docs/: architecture.md  cli-reference.md  configuration.md  getting-started.md  index.md
rustwing/: Cargo.toml
rustwing/src/: error.rs  lib.rs  patch.rs  prelude.rs
rustwing/src/infrastructure/: auth.rs  llm.rs  mod.rs
rustwing/src/repository/: generic_crud.rs  mod.rs  traits.rs
scripts/: test-template.sh
