[package]
name = "rustwing-cli"
version = "0.1.3"
edition = "2021"
description = "Rustwing CLI — scaffold, generate, and manage Rustwing projects"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/creativebash/rustwing"
keywords = ["saas", "web", "framework", "scaffold", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "rustwing"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }