[package]
name = "rustwing"
version = "0.1.2"
edition = "2024"
description = "Full-stack Rust SaaS framework built on Axum — trait-driven CRUD, auth, LLM"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/creativebash/rustwing"
keywords = ["saas", "web", "framework", "axum", "crud"]
categories = ["web-programming", "database"]

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "json", "chrono"] }
uuid = { version = "1.8", features = ["v7", "serde"] }
rig-core = "0.35.0"
thiserror = "2.0"
tracing = "0.1"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
